fix(location-card): align styling to design

--- a/components/location-card/src/LocationCard.module.scss
+++ b/components/location-card/src/LocationCard.module.scss
@@ -5,6 +5,8 @@
   box-shadow: elevation(2);
   font-style: normal;
   font-size: 1rem;
+  height: 100%;
+  background-color: $color-white;
 
   .list {
     margin: 36px 0 0;
